# Synapsenet

./: .gitignore  README.md
.github/workflows/: ci.yml
KeplerSynapseNet/: CMakeLists.txt  DARKNET_INTEGRATION_SUMMARY.txt  Dockerfile  POE_V1_DETERMINISTIC_DESIGN.txt  README.md  WHAT_IS_SYNAPSENET.txt  main_interface.txt
KeplerSynapseNet/.github/workflows/: ci.yml
KeplerSynapseNet/RELEASES/: SYNAPSENET_0_1.md
KeplerSynapseNet/data/: synapsenet.conf
KeplerSynapseNet/ide/synapsenet-vscode/: README.md  extension.js
KeplerSynapseNet/include/core/: agent_runtime.h  consensus.h  implant_compatibility.h  knowledge.h  poe_v1_engine.h  update_bundle.h
KeplerSynapseNet/include/crypto/: crypto.h  keys.h
KeplerSynapseNet/include/database/: database.h
KeplerSynapseNet/include/network/: discovery.h  network.h
KeplerSynapseNet/include/quantum/: quantum_security.h
KeplerSynapseNet/include/tui/: tui.h
KeplerSynapseNet/include/utils/: config.h
KeplerSynapseNet/include/web/: web.h
KeplerSynapseNet/interfaces txt/: DARKNET_INTEGRATION_SUMMARY.txt  IMPLANT_AI_STACK_FOR_SYNAPSENET.txt  NEUROCHIP_STACK_FOR_SYNAPSENET.txt  NODE_ATTACHED_AGENT_NETWORK.txt  POE_V1_DETERMINISTIC_DESIGN.txt  PROJECT_ARCHITECTURE_SCHEMA.txt  WHAT_IS_SYNAPSENET.txt  main_interface.txt
KeplerSynapseNet/src/: main.cpp
KeplerSynapseNet/src/core/: agent_runtime.cpp  consensus.cpp  implant_compatibility.cpp  knowledge.cpp  ledger.cpp  poe_v1.cpp  poe_v1_engine.cpp  state_manager.cpp  transfer.cpp  wallet.cpp
KeplerSynapseNet/src/crypto/: crypto.cpp  keys.cpp
KeplerSynapseNet/src/database/: database.cpp  wallet_db.cpp
KeplerSynapseNet/src/infrastructure/: messages.h
KeplerSynapseNet/src/model/: model_inference.cpp  model_loader.cpp
KeplerSynapseNet/src/network/: discovery.cpp  handshake.cpp  network.cpp  peer_manager.cpp  protocol.cpp  sync.cpp
KeplerSynapseNet/src/privacy/: hidden_volume.cpp  mix_inference.cpp  socks5_proxy.cpp  traffic_analysis.cpp
KeplerSynapseNet/src/quantum/: crypto_selector.cpp  dilithium.cpp  hwrng.cpp  hybrid_sig.cpp  kyber.cpp  qkd_bb84.cpp  quantum_manager.cpp  sphincs.cpp
KeplerSynapseNet/src/tui/: screens.cpp  tui.cpp  tui.cpp.bak  tui_dashboard.cpp  tui_mining.cpp  tui_startup.cpp
KeplerSynapseNet/src/utils/: config.cpp  threading.cpp
KeplerSynapseNet/src/web/: ai_wrapper.cpp  darknet_engines.cpp  deep_search_wrapper.cpp  forum_crawler.cpp  html_extractor.cpp  onion_search_router.cpp  search_config.cpp  tor_fetch.cpp  web_search.cpp
KeplerSynapseNet/tests/: CMakeLists.txt  test_agent_runtime.cpp  test_crypto.cpp  test_implant_compatibility.cpp  test_ledger.cpp  test_model_loader.cpp  test_network.cpp  test_network_message.cpp  test_peer_discovery.cpp  test_poe.cpp  test_privacy.cpp  test_quantum.cpp  test_remote_model.cpp  test_transfer.cpp  test_update_manifest.cpp
ide/synapsenet-vscode/: package.json
interfaces txt/: DARKNET_INTEGRATION_SUMMARY.txt  IMPLANT_AI_STACK_FOR_SYNAPSENET.txt  NODE_ATTACHED_AGENT_NETWORK.txt  POE_V1_DETERMINISTIC_DESIGN.txt  PROJECT_ARCHITECTURE_SCHEMA.txt  V0_2_RUNTIME_UPDATE_IMPLANT_SPEC.txt  WHAT_IS_SYNAPSENET.txt  main_interface.txt
